# reverie-automata

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  reverie.yaml.example
.github/workflows/: ci.yml
docs/: adapters.md  architecture.md
examples/: demo.py  with_claude_code.py
reverie_automata/: __init__.py  blast.py  config.py  engine.py  gate.py  harvest.py  inspector.py  prompts.py  runner.py  store.py  types.py
reverie_automata/adapters/: __init__.py  agents.py  base.py  sources.py  transports.py
tests/: test_adapters.py  test_blast.py  test_engine_store.py  test_gate.py  test_inspector.py  test_runner.py
